@@ -1,11 +1,13 @@
 package com.SignupForm.security;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
@@ -13,80 +15,112 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
 
     private final JwtFilter jwtFilter;
 
-    public SecurityConfig(JwtFilter jwtFilter) {
-        this.jwtFilter = jwtFilter;
-    }
-
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .csrf(csrf -> csrf.disable())
-                .sessionManagement(session ->
-                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 
+        http
+                // Enable CORS & Disable CSRF (JWT Stateless)
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .csrf(AbstractHttpConfigurer::disable)
+
+                // Stateless Session
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
+                // Authorization Rules
                 .authorizeHttpRequests(auth -> auth
+
+                        // Allow Preflight requests
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
-                        // public endpoints
+                        // ================= AUTH (Public) =================
                         .requestMatchers(
-                                "/user/login",
-                                "/user/addUser",
-                                "/user/forgot",
-                                "/user/reset",
-                                "/error"
+                                "/api/auth/login",
+                                "/api/auth/signup",
+                                "/api/auth/forgot",
+                                "/api/auth/reset"
                         ).permitAll()
 
-                        // public product viewing
+                        // ================= PUBLIC PRODUCT VIEW =================
                         .requestMatchers(HttpMethod.GET,
-                                "/api/products/**",
+                                "/api/products",
                                 "/api/product/**"
                         ).permitAll()
 
-                        // admin product control
+                        // ================= ADMIN PRODUCT MANAGEMENT =================
                         .requestMatchers(HttpMethod.POST, "/api/product/**").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.PUT, "/api/product/**").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.PATCH, "/api/product/**").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.DELETE, "/api/product/**").hasRole("ADMIN")
 
+                        // ================= CART =================
+                        .requestMatchers("/api/cart/**").hasRole("USER")
+
+                        // ================= ORDERS =================
+                        .requestMatchers("/api/orders/**").hasRole("USER")
+
+                        // ================= PROFILE =================
+                        .requestMatchers("/api/profile/**").hasRole("USER")
+
+                        // ================= RECOMMENDATIONS =================
+                        .requestMatchers("/api/recommendations/**").hasRole("USER")
+
+                        // ================= ADMIN PANEL =================
+                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
+
+                        // ================= ERROR =================
+                        .requestMatchers("/error").permitAll()
+
+                        // Any other request must be authenticated
                         .anyRequest().authenticated()
                 )
 
+                // Add JWT Filter
                 .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
+    // ================= CORS CONFIG =================
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+
         CorsConfiguration configuration = new CorsConfiguration();
 
+        // Frontend URLs
         configuration.setAllowedOrigins(List.of(
                 "http://localhost:3000",
-                "http://localhost:3001",
-                "http://localhost:5173",
-                "http://127.0.0.1:3000",
-                "http://127.0.0.1:3001",
-                "http://127.0.0.1:5173"
+                "http://localhost:3001"
         ));
 
-        configuration.setAllowedMethods(List.of(
-                "GET", "POST", "PUT", "DELETE", "OPTIONS"
+        // Allowed Methods
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
         ));
 
-        configuration.setAllowedHeaders(List.of("*"));
+        // Allowed Headers
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "Cache-Control"
+        ));
+
+        // Allow credentials (JWT)
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+
         return source;
     }
 }
